--- a/spacesim/index.html
+++ b/spacesim/index.html
@@ -11,10 +11,20 @@
   <div id="ui">
     <label>Name <input id="name" value="body"></label>
     <label>Mass <input id="mass" type="number" value="1" step="0.1"></label>
+    <label>Radius km <input id="radius" type="number" value="5" step="1"></label>
+    <label>Color <input id="color" type="color"></label>
     <button id="toggle">Pause</button>
     <button id="reset">Reset</button>
     <span id="status"></span>
   </div>
+  <div id="edit-ui" class="hidden">
+    <label>Name <input id="edit-name"></label>
+    <label>Mass <input id="edit-mass" type="number" step="0.1"></label>
+    <label>Radius km <input id="edit-radius" type="number" step="1"></label>
+    <label>Color <input id="edit-color" type="color"></label>
+    <button id="delete-body">Delete</button>
+  </div>
+  <ul id="body-list"></ul>
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
